--- a/projects/restaurant/vegan-food.html
+++ b/projects/restaurant/vegan-food.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Restauran</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
@@ -52,6 +52,15 @@
                 </div>
             </div>
         </div>
-
+        <div id="column-2">
+            <div id="main-content">
+                <h1>two-columns - Sidebars (grid)</h1>
+                <img 
+                    src="images/nabil-boukala.jpg" 
+                    alt="nature"
+                >
+                
+            </div>
+        </div>
     </body>
 </html>
