--- a/projects/final-eval/index.html
+++ b/projects/final-eval/index.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <div id="hero-1">
+            <h1>Super Bowl LVIII</h1>
+            <p>We'll have hot food, cold drinks, and big screens, 
+                all that's missing is you!
+            </p>
             <div class="hero-content">
-                <p>We'll have hot food, cold drinks, and big screens, 
-                    all that's missing is you!
-                </p>
-                <h1>Super Bowl LVIII</h1>
                 <div id="three-columns">
                     <div id="column-1">
                         <div id="content"></div>
@@ -40,8 +40,8 @@
         <div class="spacer"></div>
 
         <div>
-            <a href="#">Wish</a>
-            <a href="#">Dream</a>
+            <a href="#">I can make it</a>
+            <a href="#"> can't make it</a>
         </div>
     </body>
 </html>
