--- a/projects/restaurant/vegan-food.html
+++ b/projects/restaurant/vegan-food.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div id="navbar">
-            <a id="logo" href="index.html">Wrap It Up</a>
-            <a href="#">Home</a>
+            <a id="logo" href="#">Wrap It Up</a>
+            <a id="home" href="index.html">Home</a>
             <a href="#">About</a>
             <a href="#">History</a>
 
@@ -43,23 +43,17 @@
             </div>
             <div id="column-2">
                 <div id="main-content">
-                    <h1>two-columns - Sidebars (grid)</h1>
+                    <h1>The Big Waffle</h1>
                     <img 
                         src="images/nabil-boukala.jpg" 
                         alt="nature"
                     >
                     
                 </div>
-            </div>
-        </div>
-        <div id="column-2">
-            <div id="main-content">
-                <h1>two-columns - Sidebars (grid)</h1>
-                <img 
-                    src="images/nabil-boukala.jpg" 
-                    alt="nature"
-                >
-                
+                <p> 
+                    Enjoy our new Vegan Big Waffle meal with , eggs, hash brown, 
+                    and a side of fruit of your choice for 13.89
+                </p>
             </div>
         </div>
     </body>
