--- a/projects/restaurant/drinks.html
+++ b/projects/restaurant/drinks.html
@@ -24,5 +24,18 @@
             </div>
             <a href="#" class="cta-buttom">Sign up</a>
         </div>
+        <div id="footer">
+            <div id="footer-columns-navbar">
+                <div>
+                    <a href="#">1. Brand history</a>
+                    <a href="#">2. Mission Statement</a>
+                    <a href="#">3. Logo Specifcations</a>
+                    <a href="#">4. Photography</a>
+                    <a href="#">5. Typography</a>
+                    <a href="#">6. Imagery/Photography</a>
+                </div>
+            </div>
+            <div id="footer-navbar"></div>
+        </div>
     </body>
 </html>
