--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -22,30 +22,43 @@
                     <a href="drinks.html">Drinks</a>
                 </div>
             </div>
-            <a href="#" class="cta-buttom">Sign up</a>
+            <a href="#" class="cta-buttom">Order Now</a>
         </div>
         <div id="hero"><a href="ryan-concepcion.jpg"></a></div>
         <div id="layout">
             <h1>Brand history</h1>
-            <p>
-                Wrap It Up is a vegan food truck located in the middle Los 
-                Angeles. I open my frist food truck back in 2020. Ever sicnce 
-                then, the growth in my food truck as been amazing. My goal is 
-                to open up multiple food truckn around Los Angeles and to 
-                provide a place where our young adult can come and enjoy our 
-                food trucks graffi street art, and eat our fresh and healthy 
-                vegan meal.
-            </p>
+           
+        </div>
+        <div id="two-columns">
+            <div id="column-1">
+                <h1>About us</h1>
+                <p>
+                    Wrap It Up is a vegan food truck located in the middle Los 
+                    Angeles. I open my frist food truck back in 2020. Ever sicnce 
+                    then, the growth in my food truck as been amazing. My goal is 
+                    to open up multiple food truckn around Los Angeles and to 
+                    provide a place where our young adult can come and enjoy our 
+                    food trucks graffi street art, and eat our fresh and healthy 
+                    vegan meal.
+                </p>
+                
+            </div>
+            <div id="column-2">
+                <h2>Wrap It Up</h2>
+                <div id="Screenshot-2024Restaurant-Site">
+                     <a href="imaged/Screenshot 2024Restaurant Site.jpg"></a>
+                </div>
+            </div>
         </div>
         <div id="footer">
             <div id="footer-columns-navbar">
                 <div>
-                    <a href="#">1. Brand history</a>
-                    <a href="#">2. Mission Statement</a>
-                    <a href="#">3. Logo Specifcations</a>
-                    <a href="#">4. Photography</a>
-                    <a href="#">5. Typography</a>
-                    <a href="#">6. Imagery/Photography</a>
+                    <a href="#">1. Order Now</a>
+                    <a href="#">2. Content</a>
+                    <a href="#">3. Point of Sale</a>
+                    <a href="#">4. Build Your Own</a>
+                    <a href="#">5. Located</a>
+                    <a href="#">6. Privacy statement</a>
                 </div>
             </div>
             <div id="footer-navbar"></div>
