--- a/projects/restaurant/dessert.html
+++ b/projects/restaurant/dessert.html
@@ -24,6 +24,15 @@
             </div>
             <a href="#" class="cta-buttom">Sign up</a>
         </div>
+        <div class="dropdown-container">
+                
+            <a href="#">Menu <i class="fa-solid fa-chevron-down"></i></a>
+            <div class="dropdown-menu">
+                <a href="vegan-food.html">Food</a>
+                <a href="dessert.html">Dessert</a>
+                <a href="drinks.html">Drinks</a>
+            </div>
+        </div>
         <div id="footer">
             <div id="footer-columns-navbar">
                 <div>
