--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -24,7 +24,12 @@
             </div>
             <a href="#" class="cta-buttom">Order Now</a>
         </div>
-        <div id="hero"><a href="ryan-concepcion.jpg"></a></div>
+        <div id="hero"><a href="ryan-concepcion.jpg"></a>
+            <div class="hero-content">
+                <h2>Vegan Truck</h2>
+                <h3>Enjoy the fresh taste of Wrap it up vegan truck</h3>
+            </div>
+        </div>
         <div id="layout">
             <h1>Brand history</h1>
            
@@ -41,13 +46,13 @@
                     food trucks graffi street art, and eat our fresh and healthy 
                     vegan meal.
                 </p>
-                
             </div>
             <div id="column-2">
                 <h2>Wrap It Up</h2>
-                <div id="Screenshot-2024Restaurant-Site">
-                     <a href="imaged/Screenshot 2024Restaurant Site.jpg"></a>
-                </div>
+                <img
+                    src="images/Screenshot2 2024.jpg"
+                    alt="screenshot-2024-restaurant"
+                >
             </div>
         </div>
         <div id="footer">
