--- a/projects/restaurant/vegan-food.html
+++ b/projects/restaurant/vegan-food.html
@@ -56,6 +56,45 @@
                 </p>
             </div>
         </div>
+        <div id="card-section">
+            <div class="single-column card-container">
+
+                <div class="card">
+                    <h3>Berry Pancakes</h3>
+                    <img 
+                        src="images/alexandra-kusper.jpg" 
+                        alt="nature"
+                     >
+                    <p>
+                        Taste our delicious Berry Pancakes, having
+                        10g - 12g of protein per plate.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <h3>Veggie & Chichen Wrap</h3>
+                    <img 
+                        src="images/max-griss.jpg" 
+                        alt="nature"
+                    >
+                    <p>
+                        enjoy your choice of our Veggie or Chichen Wrap, having 
+                        20g - 25g carbs per Wrap.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <h3>Sweet & Delicious platter</h3>
+                    <img 
+                        src="images/jessica-ruscello.jpg" 
+                        alt="nature"
+                    >
+                    <p>Create your own charcuterie board.</p>
+                </div>
+                
+
+            </div>
+        </div>
         <div id="footer">
             <div id="footer-columns-navbar">
                 <div>
