Restaurant last day

--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -27,7 +27,7 @@
         <div id="hero"><a href="ryan-concepcion.jpg"></a>
             <div class="hero-content">
                 <h2>Vegan Truck</h2>
-                <h3>Enjoy the fresh taste of Wrap it up vegan truck</h3>
+                <h3>Come enjoy the fresh taste of our wraps and more.</h3>
             </div>
         </div>
         <div id="layout">
